bug fix and adding alt for images

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--- TO DO - MY NAME -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -28,7 +27,7 @@
                 Please reach out to us with any questions or concerns. We are happy to help you plan your dream vacation with us!
                 Required fields marked with a *
             </p>
-            <img src="images/swiss-peak.jpg" alt="TO DO" width="350" height="455" id="peak">
+            <img src="images/swiss-peak.jpg" alt="A view from the bottom of a mountain that shows the peak and the surrounding forest." width="350" height="455" id="peak">
         </div>
         <div class="column">
             <form action="https://wp.zybooks.com/form-viewer.php" method="post">
