--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--- TO DO - MY NAME -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,10 +16,9 @@
             <ul>
                 <li>Home</li>
                 <li><a href="#">Accommodations</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <!-- <img src="images/swiss-valley.jpg" alt="TO DO - BACKGROUND IMAGE"> -->
     </header>
     <main id="mainIndex">
       <div id="intro">
@@ -33,13 +31,13 @@
       </div>
 
       <div class="column bottom">
-        <img src="images/swiss-chalet.jpg" alt="TO DO" width="590px" height="360px">
+        <img src="images/swiss-chalet.jpg" alt="a wooden cottage in the spring" width="590px" height="360px">
         <h3>Amenities and Options for Everyone</h3>
         <p>Escape from everyday life and spend a few warm and relaxing days in with us. Enjoy the refreshing mountain air. Discover the village and the surrounding mountains on foot or with our bikes. Visit our spa or ski runs during a winter visit, or take a guided hike during the warmer months. We offer something for everyone!</p>
       </div>
 
       <div class="column bottom">
-        <img src="images/snowy-chalet.jpg" alt="TO DO" width="590px" height="360px">
+        <img src="images/snowy-chalet.jpg" alt="a wooden cottage covered in snow in the winter" width="590px" height="360px">
         <h3>An Escape For Any Time of Year</h3>
         <p>Whether you prefer a snowy mountain escape or a peaceful summer getaway surrounded by verdant mountains and valleys, we have it all. You can hit the slopes and build a snowman in the winter, and you can head out for a hike, picnics, and swimming in the spring and summer. Escape the ordinary with us!</p>
       </div>
