--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Codeaway</title>
     <meta name="description" content="Main page for Codeaway, detailing the environment of the resort and possible activities">
     <meta name="author" content="Yovan Collins">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="style.css">
   </head>
   <body id="mainBody">
