--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Codeaway | Contact</title>
     <meta name="description" content="Contact page for Codeaway, where users can enter their contact information">
     <meta name="author" content="Yovan Collins">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
